<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="str_head">Choose one of the methods to contact us.</string>
    <string name="str_email">EMAIL</string>
    <string name="str_email_small">Email</string>
    <string name="str_name">Name</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_rem_sub_days">Remaining Subscription Days</string>
    <string name="str_waittime">Wait Time : 24 hours</string>
    <string name="str_quest">Questions or Comments?</string>
    <string name="str_email_text">Email <u>%1$s</u> to our customer care representatives and we will get back soon.</string>
    <string name="str_phone">PHONE</string>
    <string name="str_phone_small">Phone</string>
    <string name="str_phone_number_small">Phone Number</string>
    <string name="str_phn_waittime">Wait Time: Less than 30 sec</string>
    <string name="str_ustoll">US Toll Free:</string>
    <string name="str_mob_no">1800 000 2345</string>
    <string name="str_get_email">joannsupports@joann.com</string>
    <string name="str_phn_timings">Weekdays: 8AM - 6PM | Weekends: 9AM - 1PM</string>
    <string name="str_support">Support</string>
    <string name="str_patterns_url">https://www.joann.com/sewing/patterns/</string>
    <string name="about_app">At JOANN, your trust and satisfaction is a priority. We know that your privacy is important, and that is why we take care to safeguard the confidentiality and security of your information. This Privacy Policy is intended to inform you of our policies and practices regarding our use and disclosure of the information that you submit to us, and the information that we collect from you through our web site, our mobile applications, and in our retail stores. \n\nWhenever we use the words “we” or “us” or “JOANN,” we are referring to Jo-Ann Stores LLC, (doing business as JOANN), and to the affiliates and parent companies of Jo-Ann Stores, LLC, including Joann.com, LLC, which is a wholly owned subsidiary of Jo-Ann Stores, LLC. Whenever we use the words “our web site,” we are referring to https://www.joann.com and to our mobile application(s) (“app”). \n\nThis Privacy Policy is divided into the following sections: \n\nDefinitions\nConsent \nHow We Collect Personal Information \nHow We Use Personal Information \nOur Disclosure of Your Personal Information \nAdvertising \nSocial Network Widgets; External Ad Blocking \nMobile Applications \nHow You Can Stop Receiving Communications \nInformation From Children Under 13 \nLinks to Other Web Sites \nSecurity \nYour California Privacy Rights \nQuestions about this Privacy Policy \nHow to Access or Correct Personal Information or Opt Out of Marketing and Advertising Revisions to the Privacy Policy</string>
    <string name="watch">Watch video</string>
    <string name="visit">Visit website</string>
    <string name="available">Available projectors in the Wi-Fi network</string>
    <string name="scan">Search for projectors</string>
    <string name="delete_account">Delete Account</string>
    <string name="disconnect">Disconnect</string>
    <string name="str_projectorsfound">%1$s projectors found</string>
    <string name="str_connection_failed">Projector Connection failed!</string>
    <string name="str_ok">OK</string>
    <string name="str_retry">Retry</string>
    <string name="str_switch_projector">Do you want to switch the projector?</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_yes_caps">YES</string>
    <string name="renew_subscription">Renew Subscription</string>
    <string name="str_no_caps">NO</string>
    <string name="str_connecitivity_title">Connectivity</string>
    <!--Added by vineetha for switch language popup-->
    <string name="switchlanguage_title" tools:ignore="ExtraTranslation">Switch Language</string>
    <string name="str_ble_message">This app needs Bluetooth connectivity</string>
    <string name="str_later">LATER</string>
    <string name="str_wifi_message">This app needs WiFi connectivity</string>
    <string name="str_settings">SETTINGS</string>
    <string name="mirroring_reminder">Mirroring Reminder</string>
    <string name="cut_number_reminder">Cut Number Reminder</string>
    <string name="splicing_notification">Splicing Notification</string>
    <string name="multidirectional_splicing_notification">Multidirectional Splicing Notification</string>
    <string name="click_to_zoom_notification">Click to zoom notification</string>
    <string name="save_calibration_image">Save Calibration Photos</string>
    <string name="guest_my_folder_message">Guest User does not have this functionality.</string>
    <string name="delete_msg">Are you sure you want to delete the account ?</string>
    <string name="str_dele_account_info">Deleting your account permanently disables access to the Ditto Patterns website and mobile app. Are you sure you want to delete?</string>
    <string name="subscription_desc">Your subscription will get expired in 200 days. Please renew the subscription to continue working on it.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>