<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.ditto.menuitems_ui.subscription_info.fragment.SubscriptionInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cc_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scissor_grey_light"
        tools:context=".subscription_info.fragment.SubscriptionInfoFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".14" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".06" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".027" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end_second_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".97" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/guide_end_second_tile"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".58"
            app:layout_constraintStart_toStartOf="@+id/guide_start_tile"
            app:layout_constraintTop_toBottomOf="@+id/guide_top_tile">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/imagestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".064" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".96" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_centre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".40" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/imagetop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_view_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".42" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_delete_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".60" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_wait_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".60" />


            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:gravity="start"
                android:text="@string/str_first_name"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@+id/guide_centre"
                app:layout_constraintStart_toEndOf="@id/imagestart"
                app:layout_constraintTop_toBottomOf="@+id/imagetop" />

            <TextView
                android:id="@+id/tv_first_name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:gravity="start"
                android:text="@{viewModel.firstName}"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_centre"
                app:layout_constraintTop_toBottomOf="@+id/imagetop" />


            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:gravity="start"
                android:text="@string/str_last_name"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@+id/guide_centre"
                app:layout_constraintStart_toEndOf="@id/imagestart"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_name" />

            <TextView
                android:id="@+id/tv_last_name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:gravity="start"
                android:text="@{viewModel.lastName}"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_centre"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_name" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:gravity="start"
                android:text="@string/str_email_small"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@+id/guide_centre"
                app:layout_constraintStart_toEndOf="@id/imagestart"
                app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />


            <TextView
                android:id="@+id/tv_email_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:gravity="start"
                android:text="@{viewModel.email}"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_centre"
                app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:gravity="start"
                android:text="@string/str_phone_number_small"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@+id/guide_centre"
                app:layout_constraintStart_toEndOf="@id/imagestart"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_phone_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:gravity="start"
                android:text="@{viewModel.phone}"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_centre"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_subscription_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:gravity="start"
                android:text="@string/str_rem_sub_days"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@+id/guide_centre"
                app:layout_constraintStart_toEndOf="@id/imagestart"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

            <TextView
                android:id="@+id/tv_subscription_days_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:gravity="start"
                android:text="@{viewModel.subscriptionEndDateBase}"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_wait"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_centre"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

            <TextView
                android:id="@+id/sub_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:gravity="start"
                android:text="@{viewModel.subscriptionEndDateDesc}"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/str_quest"
                android:paddingTop="@dimen/small_padding"
                app:layout_constraintTop_toBottomOf="@+id/tv_subscription_days"
                app:layout_constraintBottom_toTopOf="@+id/guide_delete_desc"
                app:flow_verticalBias="0"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toStartOf="@+id/imagestart" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/padding_x"
                android:background="@drawable/bg_scandevice"
                android:visibility="gone"
                android:drawablePadding="5dp"
                android:ellipsize="none"
                android:fontFamily="@font/avenir_next_lt_pro_demi"
                android:gravity="center"
                android:onClick="@{() -> viewModel.onRenewSubClick()}"
                android:paddingHorizontal="@dimen/margin_top_devider"
                android:singleLine="true"
                android:text="@string/renew_subscription"
                android:textAllCaps="false"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintLeft_toLeftOf="@id/imagestart"
                app:layout_constraintTop_toBottomOf="@id/sub_desc">

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>